tests/sumo/errors/person/unconnected_walk/errors.sumo
Error: Disconnected plan for person 'p1' (beg not connected to end).
Quitting (on error).
